k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: be
spec:
  selector:
    app: backend
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: fe
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
